fix bug of export with pic